--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,8 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">Juli</a>
-    <div class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a routerLink="tutorials" class="nav-link">Tutorials</a>
-      </li>
-      <li class="nav-item"><a routerLink="add" class="nav-link">Add</a></li>
-    </div>
+    <a href="#" class="navbar-brand">School Analysis</a>
   </nav>
-  <div class="container mt-3">
+  <div class="container mt-3 mainContainer">
     <router-outlet></router-outlet>
   </div>
 </div>
